--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   path: ^1.8.3
   uuid: ^4.2.1
   intl: ^0.18.1
+  image_picker: ^1.0.7
+  path_provider: ^2.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
